@@ -7,6 +7,9 @@ In Progress
 - Default console font color is now grey. I never noticed that I had
   white text on a black background before. That's a lot of contrast.
   This is adjustable too through Armitage -> Preferences.
+- And... the Armitage console now displays pretty colors. If you don't
+  like colors, set the console.show_colors.boolean preference to false
+  through Armitage -> Preferences.
 
 14 May 12
 ---------
